--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
   <head>
     <meta charset="utf-8" />
-    <title>Personal Portfolio Website</title>
+    <title>Raghav Portfolio Website</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <!-- font awesome -->
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css" />
@@ -19,7 +19,7 @@
     <link rel="stylesheet" class="alternate-style" title="color-4" href="/css/skins/color-4.css">
     <link rel="stylesheet" class="alternate-style" title="color-5" href="/css/skins/color-5.css" disabled>
     <!-- fav icon  -->
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="favicon.jpg">
   </head>
   <body class="dark">
 
@@ -733,7 +733,7 @@
             <div class="contact-item-inner outer-shadow">
               <i class="fas fa-envelope">
                 <span class="contact-span">Email Address</span>
-                <p class="contact-p">golammorsed6@gmail.com</p>
+                <p class="contact-p">raghavansriraman01@gmail.com</p>
               </i>
             </div>
           </div>
