--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="container">
         <div class="row justify-content-between">
           <div class="logo">
-            <a href="index.html">g</a>
+            <a href="index.html">R</a>
           </div>
           <div class="hamburger-btn outer-shadow hover-in-shadow">
             <i class="fas fa-bars"></i>
@@ -102,7 +102,7 @@
 
           <div class="home-image">
             <div class="img-box inner-shadow">
-              <img src="./img/profile-pic.png" class="outer-shadow" alt="profile-pic" srcset="">
+              <img src="favicon.jpg" class="outer-shadow" alt="profile-pic" srcset="">
             </div>
           </div>
         </div>
@@ -122,7 +122,7 @@
         <div class="row">
           <div class="about-img">
             <div class="img-box inner-shadow">
-              <img src="./img/profile-pic.png" alt="" class="outer0shadow">
+              <img src="favicon.jpg" alt="" class="outer0shadow">
             </div>
             <!-- social icons -->
               <div class="social-links">
@@ -723,7 +723,7 @@
             <div class="contact-item-inner outer-shadow">
               <i class="fas fa-phone">
                 <span class="contact-span">Phone</span>
-                <p class="contact-p">+880 152 147 5412</p>
+                <p class="contact-p">+91 7904007861</p>
               </i>
             </div>
           </div>
@@ -743,7 +743,7 @@
             <div class="contact-item-inner outer-shadow">
               <i class="fas fa-map-marker-alt">
                 <span class="contact-span">Address</span>
-                <p class="contact-p">Dhaka, Bangladesh</p>
+                <p class="contact-p">chennai, Tamilnadu</p>
               </i>
             </div>
           </div>
