--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <p>I'm <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
             </div>
             <!-- ========== End typing animation ========== -->
-            <h1>Web Designer & Developer</h1>
+            <h1>An All Rounder Techie </h1>
             <a href="#about" class="link-item btn-1 outer-shadow hover-in-shadow">More About Me</a>
           </div>
 
@@ -127,12 +127,12 @@
             <!-- social icons -->
               <div class="social-links">
 
-                <a href="https://www.facebook.com/EEE-project-solution-lab-107106394047092/" target="_nextTab" class="outer-shadow hover-in-shadow link-card" data-tilt data-tilt-scale="1.1"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://www.youtube.com/channel/UC2TmzHkWeKpEXnYxRAHdjIQ" target="_nextTab" class="outer-shadow hover-in-shadow link-card" data-tilt data-tilt-scale="1.1"><i class="fab fa-youtube"></i></a>
-                <a href="#" target="_nextTab" class="outer-shadow hover-in-shadow link-card" data-tilt data-tilt-scale="1.1"><i class="fab fa-github"></i></a>
+                <a href="" target="_nextTab" class="outer-shadow hover-in-shadow link-card" data-tilt data-tilt-scale="1.1"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://youtube.com/@eduoffl-b3s?si=ltkPLk6VZbSADbF7" target="_nextTab" class="outer-shadow hover-in-shadow link-card" data-tilt data-tilt-scale="1.1"><i class="fab fa-youtube"></i></a>
+                <a href="https://github.com/Raghavanoffl?tab=repositories" target="_nextTab" class="outer-shadow hover-in-shadow link-card" data-tilt data-tilt-scale="1.1"><i class="fab fa-github"></i></a>
                 <a href="#" target="_nextTab" class="outer-shadow hover-in-shadow link-card" data-tilt data-tilt-scale="1.1"><i class="fab fa-twitter"></i></a>
-                <a href="#" target="_nextTab" class="outer-shadow hover-in-shadow link-card" data-tilt data-tilt-scale="1.1"><i class="fab fa-instagram"></i></a>
-                <a href="#" target="_nextTab" class="outer-shadow hover-in-shadow link-card" data-tilt data-tilt-scale="1.1"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/.raghava.?igsh=ZmZ3bG5xdjRxcXNj&utm_source=qr" target="_nextTab" class="outer-shadow hover-in-shadow link-card" data-tilt data-tilt-scale="1.1"><i class="fab fa-instagram"></i></a>
+                <a href="www.linkedin.com/in/raghavan01" target="_nextTab" class="outer-shadow hover-in-shadow link-card" data-tilt data-tilt-scale="1.1"><i class="fab fa-linkedin"></i></a>
               </div>
             </div>
           <div class="about-info">
@@ -145,7 +145,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit eius officia ea ut vonsectetur adipisicing elit. Illo voluptatum iste, tempora rem obcaecati omnis delectus sunt, consequuntur, et ut quasi aperiam assumenda! <br><br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex beatae reprehenderit vero maiores dignissimos error vitae, optio inventore explicabo quia officiis magni delectus? -->
 
 
-            <a href="cv.pdf" class="btn-1 outer-shadow hover-in-shadow" target="next_page">Download CV</a>
+            <a href="Raghavan ..pdf" class="btn-1 outer-shadow hover-in-shadow" target="next_page">Download CV</a>
             <a href="#contact" class="link-item btn-1 outer-shadow hover-in-shadow">Hire Me</a>
           </div>
         </div>
