--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <a href="https://github.com/Raghavanoffl?tab=repositories" target="_nextTab" class="outer-shadow hover-in-shadow link-card" data-tilt data-tilt-scale="1.1"><i class="fab fa-github"></i></a>
                 <a href="#" target="_nextTab" class="outer-shadow hover-in-shadow link-card" data-tilt data-tilt-scale="1.1"><i class="fab fa-twitter"></i></a>
                 <a href="https://www.instagram.com/.raghava.?igsh=ZmZ3bG5xdjRxcXNj&utm_source=qr" target="_nextTab" class="outer-shadow hover-in-shadow link-card" data-tilt data-tilt-scale="1.1"><i class="fab fa-instagram"></i></a>
-                <a href="www.linkedin.com/in/raghavan01" target="_nextTab" class="outer-shadow hover-in-shadow link-card" data-tilt data-tilt-scale="1.1"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/raghavan01/" target="_nextTab" class="outer-shadow hover-in-shadow link-card" data-tilt data-tilt-scale="1.1"><i class="fab fa-linkedin"></i></a>
               </div>
             </div>
           <div class="about-info">
