--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
               
               
               <div class="skill-item">
-                <p>SQL/p>
+                <p>SQL<p>
                 <div class="progress inner-shadow">
                   <div class="progress-bar" style="width: calc(70% - 14px);">
                     <span>70%</span>
